# rootscpp

./: CMakeLists.txt  Untitled.ipynb  deb.cpp  f4.set  f4.set_reduced  f4.vectors  gramm  kartan.txt  kartran.txt  linalg.cpp  linalg.h  main.cpp  readme.md  unique.cpp  weights
